syntax = "proto2";

package room;

import "error.proto";
import "enum.proto";

// GeographicalLocation 玩家地理位置
message GeographicalLocation{
    optional LocSourceType type = 1; // 来源类型
    optional double longitude = 2;  // 经度
    optional double latitude = 3;   // 纬度
}
// RoomLoginReq 房间登录请求
message RoomLoginReq {
    optional string user_name = 1;  // 用户名
}

// RoomLoginRsp 登录房间响应
message RoomLoginRsp {
    optional uint64 player_id = 1; // 用户 ID 
    optional uint64 coin = 2;       // 用户金币数
    optional RoomError err_code = 3;    // 错误码
}

// DeviceInfo 设备信息
message DeviceInfo {
    optional DeviceType device_type = 1; // 设备类型
    optional string mac_addr = 2;        // MAC 地址
    optional string uuid = 3;            // 设备唯一 ID 
    optional string android_id = 4;      // 安卓 ID， 仅安卓设备有
}

// RoomVisitorLoginReq 游客登录请求
message RoomVisitorLoginReq {
    optional DeviceInfo device_info = 1;
}

// RoomVisitorLoginRsp 游客登录应答
message RoomVisitorLoginRsp {
    optional RoomError err_code = 1;
    optional string user_name = 2;
    optional uint64 player_id = 3;
    optional uint64 coin = 4; 
}

// RoomJoinDeskReq 申请进入房间请求
message RoomJoinDeskReq {
    optional uint32 reserve = 1;    // 保留字段
    optional GameId game_id = 2;     //游戏ID
    repeated GeographicalLocation location = 3;  // 地理位置
}

// RoomJoinDeskRsp 响应加入房间
message RoomJoinDeskRsp {
    optional RoomError err_code = 1; // 错误码    
}

// RoomPlayerInfo 房间玩家数据
message RoomPlayerInfo {
    optional uint64 player_id = 1;  // 用户 ID
    optional string name = 2;       // 用户 姓名
    optional uint64 coin = 3;       // 用户 金币数
    optional uint32 seat = 4;       // 用户 座位号
    repeated GeographicalLocation location = 5;  // 地理位置
}

// RoomDeskCreatedNtf 房间创建成功通知
message RoomDeskCreatedNtf {
    repeated RoomPlayerInfo players = 1; // 玩家列表
}

// RoomQuitReq 退出牌局请求
message RoomDeskQuitReq {
    optional uint32 reserve = 1;    // 保留字段
}

// RommDeskQuitRsp 退出牌局响应
message RoomDeskQuitRsp{
    optional RoomError err_code = 1; // 错误码
}

// RoomDeskDismissNtf 牌桌解散通知
message RoomDeskDismissNtf {
    optional RoomError err_code = 1; // 错误码
}

// RoomDeskContinueReq 续局请求
message RoomDeskContinueReq {
    optional uint32 reserver = 1; // 保留
    optional GameId game_id = 2;     //游戏ID
    repeated GeographicalLocation location = 3;  // 地理位置
}

// RoomDeskContinueRsp 续局应答
message RoomDeskContinueRsp {
    optional RoomError err_code = 1; // 错误码    
}

// RoomGameStatusReq 是否需要恢复牌局请求
message RoomDeskNeedReusmeReq
{
	optional uint32 reserve = 1;    // 保留字段
}

// RoomGameStatusRsp 是否需要恢复牌局应答
message RoomDeskNeedReusmeRsp
{
	optional bool is_need = 1;    // 是否需要恢复牌局
	optional GameId game_id = 2;  //游戏ID
}

// ChatType 聊天类型
enum ChatType {
    CT_EXPRESSION = 0; // 表情
    CT_QUICK      = 1; // 快捷语
    CT_VOICE      = 2; // 语音
    CT_WRITE      = 3; // 打字
}

// RoomDeskChatReq 聊天请求
message RoomDeskChatReq {
   optional ChatType chat_type = 1;  // 聊天类型 
   optional string chat_info   = 2;  // 聊天信息
}

// RoomDeskChatNtf 聊天通知
message RoomDeskChatNtf {
   optional uint64 player_id   = 1;  // 聊天发起者 ID
   optional ChatType chat_type = 2;  // 聊天类型 
   optional string chat_info   = 3;  // 聊天信息
}


// PlayerLocation 玩家地理位置
message PlayerLocation{
    optional uint64 player_id = 1;  // 玩家ID
    repeated GeographicalLocation location = 2; // 玩家地理位置
}

// RoomPlayerLocationReq 玩家地理位置请求
message RoomPlayerLocationReq{
    optional uint32 reserve = 1; // 保留字段
}

// RoomPlayerLocationRsp 玩家地理位置应答
message RoomPlayerLocationRsp{
    repeated PlayerLocation locations = 1; // 玩家地理位置
}
